--- a/_templates/styleguide.html
+++ b/_templates/styleguide.html
@@ -299,6 +299,37 @@
                   </figcaption>
             </figure>
         </section>
+
+        <section id="figures-image-grid">
+
+            <h3 class="typography--type-2">Figures in grid</h3>
+
+            <section hill-layout="row" class="layout__section--large-maxwidth figure--image-grid">
+                <div hill-layout="box-1/2 device-small-1/1">
+                    <figure class="figure">
+                        <img  class="figure__image" src="/assets/images/articles/this-will-be-the-web_1024x768.png" alt="This will be the Web, Brad Frost">
+                    </figure>
+                </div>
+
+                <div hill-layout="box-1/2 device-small-1/1">
+                    <figure class="figure">
+                        <img  class="figure__image" src="/assets/images/articles/this-will-be-the-web_1024x768.png" alt="This will be the Web, Brad Frost">
+                    </figure>
+                </div>
+
+                <div hill-layout="box-1/2 device-small-1/1">
+                    <figure class="figure">
+                        <img  class="figure__image" src="/assets/images/articles/this-will-be-the-web_1024x768.png" alt="This will be the Web, Brad Frost">
+                    </figure>
+                </div>
+
+                <div hill-layout="box-1/2 device-small-1/1">
+                    <figure class="figure">
+                        <img  class="figure__image" src="/assets/images/articles/this-will-be-the-web_1024x768.png" alt="This will be the Web, Brad Frost">
+                    </figure>
+                </div>
+            </section>
+        </section>
     </main>
 
     @@include('_layout/_footer.html')
