--- a/_templates/index.html
+++ b/_templates/index.html
@@ -8,6 +8,7 @@
     <header class="layout__section" iii-bgcolor="grey">
         <h1 class="typography--type-1 layout__nospace-top color--white">Makuyuni e.V. <br>
             <span class="typography--type-2 layout__nospace-top">Education is the key to Happiness</span>
+            <i class="typography--type-3 layout__nospace-top" style="display:block;">&mdash; with heart from Cologne to Makuyuni</i>
         </h1>
     </header>
 
