Add new post 13.07.2018, add "Vereinssatzung"

--- a/_templates/impressum.html
+++ b/_templates/impressum.html
@@ -30,6 +30,12 @@
 
                 <p><b>Vertretungsberechtigter Vorstand</b>: Andreas Klein (1. Vorsitzender), Jan Grandisch (2. Vorsitzender)</p>
                 <p><b>Registereintrag</b>: Wir befinden und gerade in Gründung und sind offiziell noch nicht im Vereinsregister eingetragen.</p>
+
+                <p>
+                    <b>Vereinssatzung</b>:
+                    <a href="/files/07.2018_vereinssatzung-makuyuni-org.pdf" iii-color="blue" target="_blank" class="typography--link--icon">&nbsp;
+                        @@include('_modules/_icons/_icons.html', { "name": "download", "inline": true, "size": "small", "attr":""})07.2018_vereinssatzung-makuyuni-org.pdf</a>
+                </p>
             </address>
 
             <h2 class="typography--type-3">Datenschutz</h2>
