--- a/_templates/index.html
+++ b/_templates/index.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 
-    <header class="layout__section" iii-bgcolor="grey">
-        <h1 class="typography--type-1 layout__nospace-top color--white">Makuyuni e.V. <br>
+    <header class="layout__section" iii-bgcolor="orange">
+        <h1 class="typography--type-1 layout__nospace-top color--white">Makuyuni.org project<br>
             <span class="typography--type-2 layout__nospace-top">Education is the key to Happiness</span>
-            <i class="typography--type-3 layout__nospace-top" style="display:block;">&mdash; with heart from Cologne to Makuyuni</i>
+            <i class="typography--type-3 layout__nospace-top" style="display:block;">&mdash; with heart from Cologne to Makuyuni, Tanzania</i>
         </h1>
     </header>
 
@@ -23,34 +23,44 @@
             </p>
         </section>
 
-        <article>
-            <section class="layout__section">
+        <section class="layout__section">
+            <h2 class="typography--type-2">Aktuelles</h2>
+
+            <article>
+                <p><b>13 Juli 2018</b> &mdash; Die Gründung der gemeinnützigen Organisation / NGO Makuyuni e.V. ist getan, wir sind nun offiziell ein Verein. Danke an alle Personen die sich bereit erklärt haben uns in diesem Vorhaben zu unterstützen, jetzt kann es endlich losgehen. Die <a href="/files/07.2018_vereinssatzung-makuyuni-org.pdf" target="_blank" class="typography--link">Vereinssatzung</a> könnt Ihr euch hier reinziehen.
+                </p>
+
+                <p>Es gibt jedoch noch eine Menge Dinge zu erledigen, bis wir uns endlich mit inhaltlichen Themen beschäftigen können, z.b muss das Finanzamt uns als gemeinnützig anerkennen und es muss ein Eintrag ins Vereinsregister erfolgen. </p>
+
+                <figure class="figure">
+                    <img  class="figure__image" src="/assets/images/articles/13.07.2018/gruendungsversammlung.jpg" alt="Alle gemeinsam gründen wir die Organisation Makuyuni e.V.">
+
+                    <figcaption>Gründungsversammlung makuyuni.org project am 12.07.2018, Südstadt Köln</figcaption>
+                </figure>
+            </article>
+
+            <hr>
+
+            <article>
                 <p>
-                    <b>11. July 2018</b> &mdash; Wir befinden uns gerade in der Vereinsgründung! Eine Vereinssatzung muss geschrieben werden und wir müssen die Werte des Vereins abstimmen. <br>Eine Menge toller Menschen haben uns schon gefragt wie sie uns unterstützen können, jedoch müsst Ihr euch noch ein bisschen gedulden bis der offizielle Teil erledigt ist.
+                    <b>11 Juli 2018</b> &mdash; Wir befinden uns gerade in der Vereinsgründung! Eine Vereinssatzung muss geschrieben werden und wir müssen die Werte des Vereins abstimmen. <br>Eine Menge toller Menschen haben uns schon gefragt wie sie uns unterstützen können, jedoch müsst Ihr euch noch ein bisschen gedulden bis der offizielle Teil erledigt ist.
                     Schreibt uns jedoch gerne oder ruft an, es gibt nichts Schöneres als Menschen die ein gemeinsames Ziel verfolgen und Ideen teilen dieses zu erreichen.
                 </p>
-            </section>
 
-            <section hill-layout="row" class="layout__section--large-maxwidth figure--image-grid">
-                <div hill-layout="box-1/2 device-small-1/1">
-                    <figure class="figure">
-                        <img  class="figure__image" src="/assets/images/articles/11.07.2018/besprechung-mit-kristina-noko-design.jpg" alt="Wir besprechen das Design & Logo des Vereins mit Kristina von noko-design.de">
-                        <figcaption>
-                            Wir besprechen das Design & Logo des Vereins mit Kristina von <a href="http://noko-design.de" target="_blank" class="typography--link">NOKO Design</a>, die sich bereit erklärt hat uns zu helfen. Danke nochmal ❤️
-                        </figcaption>
-                    </figure>
-                </div>
+                <figure class="figure">
+                    <img  class="figure__image" src="/assets/images/articles/11.07.2018/besprechung-mit-kristina-noko-design.jpg" alt="Wir besprechen das Design & Logo des Vereins mit Kristina von noko-design.de">
 
-                <div hill-layout="box-1/2 device-small-1/1">
-                    <figure class="figure">
-                        <img  class="figure__image" src="/assets/images/articles/11.07.2018/inoffizielles-erstes-vereinstreffen.jpg" alt="Wir haben unser erstes inoffizielles Vereinstreffen und besprechen wie es weiter geht.">
-                        <figcaption>
-                            Auf dem Edelweißpiraten Festival in der Südstadt, haben wir unser erstes inoffizielles Vereinstreffen und besprechen wie es weiter geht. Wie sollen wir heißen? Wer bekleidet welches Amt?
-                        </figcaption>
-                    </figure>
-                </div>
-            </section>
-        </article>
+                    <figcaption>Wir besprechen das Design & Logo des Vereins mit Kristina von <a href="http://noko-design.de" target="_blank" class="typography--link">NOKO Design</a>, die sich bereit erklärt hat uns zu helfen. Danke nochmal!</figcaption>
+                </figure>
+            </article>
+
+        </section>
+
+        <p hill-text="center">
+            <a href="mailto:post@makuyuni.org?subject=Schickt mir regelmäßig updates" class="button" iii-bgcolor="orange">
+                @@include('_modules/_icons/_icons.html', { "name": "info", "inline": true, "size": "small", "attr": "" })
+                Schickt mir weitere Infos</a>
+        </p>
     </main>
 
     @@include('_layout/_footer.html')
