--- a/_templates/styleguide.html
+++ b/_templates/styleguide.html
@@ -267,14 +267,14 @@
             <section id="default-figures">
                 <h3 class="typography--type-2">Figure default</h3>
                 <figure class="figure">
-                    <img  class="figure__image" src="/assets/images/articles/this-will-be-the-web_1024x768.png" alt="This will be the Web, Brad Frost">
+                    <img  class="figure__image" src="/assets/images/articles/11.07.2018/besprechung-mit-kristina-noko-design.jpg" alt="This will be the Web, Brad Frost">
                 </figure>
             </section>
 
             <section id="figures-with-caption">
                 <h3 class="typography--type-2">Figure w/ Caption</h3>
                 <figure class="figure">
-                    <img  class="figure__image" src="/assets/images/articles/this-will-be-the-web_1024x768.png" alt="This will be the Web, Brad Frost">
+                    <img  class="figure__image" src="/assets/images/articles/11.07.2018/besprechung-mit-kristina-noko-design.jpg" alt="This will be the Web, Brad Frost">
 
                     <figcaption>
                         "This will be the Web", <a href="https://twitter.com/brad_frost" class="typography--link">@brad_frost</a>
@@ -287,12 +287,8 @@
             <h3 class="typography--type-2">Figure full-width</h3>
 
             <figure class="figure--full-width">
-                <img src="/assets/images/home/9776__1200x800.jpg"
-                     srcset="/assets/images/home/9776__2000x1333.jpg 2000w,
-                             /assets/images/home/9776__1200x800.jpg 1200w,
-                             /assets/images/home/9776__768x512.jpg 768w,
-                             /assets/images/home/9776__960x1211.jpg 767w,
-                             /assets/images/home/9776__480x606.jpg 480w">
+                <img src="/assets/images/articles/11.07.2018/besprechung-mit-kristina-noko-design.jpg"
+                     srcset="/assets/images/articles/11.07.2018/besprechung-mit-kristina-noko-design.jpg 2000w">
 
                 <figcaption>
                     "This will be the Web", <a href="https://twitter.com/brad_frost" class="typography--link">@brad_frost</a>
@@ -307,25 +303,25 @@
             <section hill-layout="row" class="layout__section--large-maxwidth figure--image-grid">
                 <div hill-layout="box-1/2 device-small-1/1">
                     <figure class="figure">
-                        <img  class="figure__image" src="/assets/images/articles/this-will-be-the-web_1024x768.png" alt="This will be the Web, Brad Frost">
+                        <img  class="figure__image" src="/assets/images/articles/11.07.2018/besprechung-mit-kristina-noko-design.jpg" alt="This will be the Web, Brad Frost">
                     </figure>
                 </div>
 
                 <div hill-layout="box-1/2 device-small-1/1">
                     <figure class="figure">
-                        <img  class="figure__image" src="/assets/images/articles/this-will-be-the-web_1024x768.png" alt="This will be the Web, Brad Frost">
+                        <img  class="figure__image" src="/assets/images/articles/11.07.2018/besprechung-mit-kristina-noko-design.jpg" alt="This will be the Web, Brad Frost">
                     </figure>
                 </div>
 
                 <div hill-layout="box-1/2 device-small-1/1">
                     <figure class="figure">
-                        <img  class="figure__image" src="/assets/images/articles/this-will-be-the-web_1024x768.png" alt="This will be the Web, Brad Frost">
+                        <img  class="figure__image" src="/assets/images/articles/11.07.2018/besprechung-mit-kristina-noko-design.jpg" alt="This will be the Web, Brad Frost">
                     </figure>
                 </div>
 
                 <div hill-layout="box-1/2 device-small-1/1">
                     <figure class="figure">
-                        <img  class="figure__image" src="/assets/images/articles/this-will-be-the-web_1024x768.png" alt="This will be the Web, Brad Frost">
+                        <img  class="figure__image" src="/assets/images/articles/11.07.2018/besprechung-mit-kristina-noko-design.jpg" alt="This will be the Web, Brad Frost">
                     </figure>
                 </div>
             </section>
