Add paypal donation button section

--- a/_modules/_contact/_contact.html
+++ b/_modules/_contact/_contact.html
@@ -1,7 +1,9 @@
-<section class="contact" hill-text="center">
-    <a href="mailto:post@makuyuni.org?subject=Ich möchte mehr erfahren über Makuyuni.org" class="typography--link--icon" hill-layout="space-right" iii-color="grey">
-        @@include('_modules/_icons/_icons.html', { "name": "email", "inline": true, "size": "small", "attr": "" })<span hill-layout="device-extra-small-0">Mail</span></a>
+<section class="contact" hill-text="center" id="contact">
+    <a href="#contact-us" title="Nimm Kontakt auf" class="typography--link--icon" hill-layout="space-right" iii-color="black">
+        @@include('_modules/_icons/_icons.html', { "name": "email", "inline": true, "size": "small", "attr": "" })</a>
 
+    <a href="#donate" title="Jetzt spenden" class="typography--link--icon" hill-layout="space-right" iii-color="black">
+        @@include('_modules/_icons/_icons.html', { "name": "donation", "inline": true, "size": "small", "attr": "" })</a>
 
     <form class="newsletter" action="https://tinyletter.com/makuyuni-org" target="_blank" method="post">
         <input type="hidden" value="1" name="embed"/>
