Fix typo in donate section

--- a/_modules/_donation/_donation.html
+++ b/_modules/_donation/_donation.html
@@ -2,10 +2,10 @@
 
     <h2 id="contact-us" class="typography--type-2 layout__section__headline">@@include('_modules/_icons/_icons.html', { "name": "team", "inline": true, "size": "large", "attr": "" }) Werdet ein Teil von uns</h2>
 
-    <p>Je mehr Menschen wir sind um so besser! Daher melde dich einfach bei uns wenn du Lust verspürst den Schulbau in Tansania mit zu begleiten oder du Fragen hast oder Idee hast.</p>
+    <p>Je mehr Menschen wir sind um so besser! Daher melde dich einfach bei uns wenn du Lust verspürst den Schulbau in Tansania mit zu begleiten oder du Fragen oder Ideen hast.</p>
 
-    <p hill-text="center" hill-layout="space-top space-bottom-3x">
-        <span class="button--secondary" iii-bordercolor="grey" iii-color="black">
+    <p class="donation__contactBoxes" hill-layout="space-top space-bottom-3x">
+        <span class="button--secondary donation__contactBoxes__item" iii-bordercolor="grey" iii-color="black">
             <span>Andy</span>
 
             <a href="mailto:post@makuyuni.org?subject=Hey Andy, Ich möchte mehr erfahren über Makuyuni.org" class="typography--link--icon" hill-layout="space-left">
@@ -17,7 +17,7 @@
             </a>
         </span>
 
-        <span class="button--secondary" iii-bordercolor="grey" iii-color="black" hill-layout="space-left">
+        <span class="button--secondary donation__contactBoxes__item" iii-bordercolor="grey" iii-color="black" hill-layout="space-left">
             <span>Jan</span>
 
             <a href="mailto:post@makuyuni.org?subject=Hey Jan, Ich möchte mehr erfahren über Makuyuni.org" class="typography--link--icon" hill-layout="space-left">
